--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 /*Media queries*/
 body {
   box-sizing: border-box;
+  box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
@@ -12,46 +14,48 @@ body {
 }
 
 section {
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem 2.5rem;
   height: auto;
+}
+
+.indent {
+  text-indent: 5%;
 }
 
 .wrapper--grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 6fr 4fr;
   gap: 2rem;
 }
-.wrapper--grid--3 {
+.wrapper--grid-inverse {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 4fr 6fr;
+  gap: 2rem;
+}
+.wrapper--grid-50 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  overflow-wrap: break-word;
+}
+.wrapper--grid--3col {
+  display: grid;
+  grid-template-columns: auto auto auto;
   gap: 2rem;
 }
 .wrapper--center {
   margin: auto;
-  width: 70%;
+  width: 85fr;
 }
 
-.grid-column-left {
-  grid-column: 1;
-}
-
-.grid-column-2 {
-  grid-column: 2;
-}
-
-.grid-column-3 {
-  grid-column: 3;
-  grid-row: 1/6;
-}
-
-.grid-column--left-2 {
-  grid-column: 1/3;
+.bloc-title {
+  margin: 1rem 0;
 }
 
 .bloc-txt {
   margin-bottom: 2rem;
-  margin-top: 1rem;
-  line-height: 1.5;
+  line-height: 1.8;
+  text-align: justify;
 }
 
 .bloc-txt--center {
@@ -59,10 +63,20 @@ section {
   margin-bottom: 1rem;
 }
 
+.bloc-bull {
+  background-color: rgb(217, 195, 166);
+  border-radius: 5%;
+  padding: 1rem 1rem 1rem 1rem;
+}
+
+.bloc-bull .wrapper--grid-50 {
+  overflow-wrap: break-word;
+}
+
 body {
   font-family: "Cormorant", serif;
-  font-size: 20px;
-  font-weight: 300;
+  font-size: 22px;
+  font-weight: 500;
 }
 @media screen and (max-width: 592px) {
   body {
@@ -70,27 +84,22 @@ body {
   }
 }
 
-h1, p {
+h1,
+p {
   margin-block-start: 0;
   margin-block-end: 0;
 }
 
 .heading {
-  font-size: 5.5rem;
-  font-weight: 400;
+  font-size: 4rem;
+  font-weight: 600;
   text-transform: capitalize;
   font-style: italic;
 }
 @media screen and (max-width: 592px) {
   .heading {
-    font-size: 4.5rem;
+    font-size: 4rem;
   }
-}
-.heading--bloc {
-  font-size: 4rem;
-  font-weight: 400;
-  text-transform: capitalize;
-  font-style: italic;
 }
 
 .subheading {
@@ -100,6 +109,25 @@ h1, p {
 }
 @media screen and (max-width: 592px) {
   .subheading {
+    font-size: 1.5rem;
+  }
+}
+
+.title {
+  font-size: 3.5rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  font-style: italic;
+}
+
+.subtitle {
+  font-weight: 500;
+  color: black;
+  font-size: 1.8rem;
+  font-style: italic;
+}
+@media screen and (max-width: 592px) {
+  .subtitle {
     font-size: 1.5rem;
   }
 }
@@ -130,6 +158,12 @@ nav {
 .txt--italic {
   font-style: italic;
 }
+.txt--center {
+  text-align: center;
+}
+.txt--strong {
+  font-weight: 700;
+}
 
 .emphase {
   font-style: italic;
@@ -143,7 +177,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 2px solid rgb(174, 159, 159);
+  border-bottom: 2px solid rgb(217, 195, 166);
 }
 @media screen and (max-width: 592px) {
   header {
@@ -179,62 +213,95 @@ header {
   }
 }
 
-.nav__link--bull {
+.infobulle {
   position: relative;
 }
-.nav__link--bull:hover:after, .nav__link--bull:focus:after {
+.infobulle:hover:after, .infobulle:focus:after {
   content: attr(aria-label);
   position: absolute;
   z-index: 1;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -2.5em;
+  bottom: -2em;
   width: fit-content;
   white-space: nowrap;
+  padding: 0.2em;
+  background: #333030;
+  border-radius: 2px;
+  color: white;
   font-weight: bold;
-  color: #333030;
-  font-size: 16px;
+  font-size: 12px;
 }
 
-.dropdown {
+.dropdown--btn {
   display: none;
-}
-@media screen and (max-width: 592px) {
-  .dropdown {
-    display: block;
-    margin-right: 2.5em;
-  }
-}
-.dropdown__btn {
   font-size: 30px;
   cursor: pointer;
 }
-.dropdown__menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: -1.5em;
-  list-style-type: none;
-  background-color: antiquewhite;
-  padding: 0;
-  margin: 2px 1.5em 0 0;
+@media screen and (max-width: 592px) {
+  .dropdown--btn {
+    display: inline-block;
+    margin-right: 1em;
+    float: right;
+  }
 }
-.dropdown__input {
+
+.dropdown--menu {
   display: none;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  z-index: 2;
+  transform: translateY(5rem) 2s ease-in;
 }
-.dropdown__input:hover + .dropdown__menu, .dropdown__input:checked + .dropdown__menu {
-  display: block;
+
+.dropdown__nav {
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
-.dropdown__menu li {
+.dropdown__nav ul {
+  list-style: none;
+  position: absolute;
+  top: 0;
+}
+.dropdown__nav li {
   padding: 10px 20px;
-  text-align: left;
+  text-align: center;
+  font-size: 48px;
   font-style: italic;
   border-bottom: #333030 solid 0.5px;
 }
 
-.homepage__txt {
+.dropdown--menu.open {
+  display: block;
+}
+
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+
+.footer {
+  background-color: rgb(217, 195, 166);
+  color: white;
+  height: auto;
+  padding: 1rem;
+}
+
+#homepage {
+  display: block;
+}
+#homepage__txt {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   height: auto;
@@ -244,14 +311,14 @@ header {
   justify-content: space-between;
   text-align: center;
 }
-.homepage__txt .subheading {
+#homepage__txt .subheading {
   margin-bottom: 2rem;
 }
-.homepage__txt p {
+#homepage__txt p {
   font-size: 24px;
   font-weight: 400;
 }
-.homepage__img-container {
+#homepage__img-container {
   width: 80%;
   margin: auto;
 }
@@ -287,6 +354,25 @@ img {
   object-fit: cover;
 }
 
+.map-container {
+  margin-top: 2rem;
+}
+
+.map {
+  width: 300px;
+  height: 350px;
+}
+@media screen and (max-width: 592px) {
+  .map {
+    width: 150px;
+    height: 175px;
+  }
+}
+
+.link {
+  border-bottom: 1px solid rgb(174, 159, 159);
+  font-weight: bold;
+}
 .link--contact {
   color: #333030;
   font-style: italic;
@@ -295,6 +381,12 @@ img {
 }
 .link--mail {
   font-style: italic;
+}
+
+.lang__link {
+  width: 26px;
+  height: 22px;
+  object-fit: contain;
 }
 
 button {
