--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,60 +1,82 @@
 body {
-    box-sizing: border-box;
-    
+  box-sizing: border-box;
+  box-sizing: border-box;
+
+  box-sizing: border-box;
 }
-  *,
-  *:after,
-  *:before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-  }
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
 
 section {
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem 2.5rem;
   height: auto;
 }
+.indent {
+  text-indent: 5%;
+}
 
-
-.wrapper{
-  &--grid{
-   display: grid;
-   grid-template-columns: repeat(2, 1fr);
-   gap: 2rem;
-  }
-  &--grid--3{
+.wrapper {
+  &--grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 6fr 4fr;
     gap: 2rem;
-   }
-  &--center{
-    margin: auto;
-    width: 70%;
+    &-inverse {
+      display: grid;
+      grid-template-columns: 4fr 6fr;
+      gap: 2rem;
+    }
+    &-50 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+      overflow-wrap: break-word;
+    }
   }
-  
-}
-.grid-column-left{
-  grid-column: 1;
-}
-.grid-column-2{
-  grid-column: 2;
-}
-.grid-column-3{
-  grid-column: 3;
-  grid-row: 1/6;
-}
-.grid-column--left-2{
-  grid-column: 1/3 ;
-}
 
+  &--grid--3col {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 2rem;
+  }
+  &--center {
+    margin: auto;
+    width: 85fr;
+  }
+}
+// .item-left {
+//   grid-column-start: 1;
+//   // grid-column-end: 2;
+// }
+// .item-right,
+// .item-middle {
+//   grid-column-start: 2;
+//   // grid-column-end: 3;
+// }
 
-.bloc-txt{
+.bloc-title {
+  margin: 1rem 0;
+}
+.bloc-txt {
   margin-bottom: 2rem;
-  margin-top: 1rem;
-  line-height: 1.5;
+  line-height: 1.8;
+  text-align: justify;
 }
 
-.bloc-txt--center{
+.bloc-txt--center {
   text-align: center;
   margin-bottom: 1rem;
+}
+
+.bloc-bull {
+  background-color: $color-primary;
+  border-radius: 5%;
+  padding: 1rem 1rem 1rem 1rem;
+}
+.bloc-bull .wrapper--grid-50 {
+  overflow-wrap: break-word;
 }
