--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,73 +1,90 @@
-body {  
-    font-family: 'Cormorant', serif;
-    font-size: 20px;
-    font-weight: 300;
-    @include mobile-bp{
-        font-size: 16px;
-    }
+body {
+  font-family: "Cormorant", serif;
+  font-size: 22px;
+  font-weight: 500;
+
+  @include mobile-bp {
+    font-size: 16px;
+  }
 }
-h1, p {
-    margin-block-start: 0;
-    margin-block-end: 0;
+h1,
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
+//Accueil
 .heading {
-    font-size: 5.5rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    font-style: italic; 
-    @include mobile-bp {
-        font-size: 4.5rem;
-    }
-    &--bloc{
-        font-size: 4rem;
-        font-weight: 400;
-        text-transform: capitalize;
-        font-style: italic; 
-        
-    }
-}  
-.subheading{
-    font-size : 2rem;
-    text-transform: uppercase;
-    font-weight: 400;
-    @include mobile-bp {
-        font-size: 1.5rem;
-    }
+  font-size: 4rem;
+  font-weight: 600;
+  text-transform: capitalize;
+  font-style: italic;
+  @include mobile-bp {
+    font-size: 4rem;
+  }
+}
+.subheading {
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  @include mobile-bp {
+    font-size: 1.5rem;
+  }
 }
 
+.title {
+  font-size: 3.5rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  font-style: italic;
+}
 
+.subtitle {
+  font-weight: 500;
+  color: black;
+  font-size: 1.8rem;
+  font-style: italic;
+  @include mobile-bp {
+    font-size: 1.5rem;
+  }
+}
 
 p {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 a {
-    text-decoration: none;
-    color: black;
-    &:hover,
-    &:focus{
-     color : rgb(174, 159, 159);
-    } 
+  text-decoration: none;
+  color: black;
+  &:hover,
+  &:focus {
+    color: rgb(174, 159, 159);
+  }
 }
-nav{
+nav {
+  font-style: italic;
+}
+
+.txt {
+  color: #333030;
+  text-indent: 5%;
+  &--large {
+    font-size: 26px;
+  }
+  &--italic {
     font-style: italic;
-}
+  }
+  &--center {
+    text-align: center;
+  }
 
-.txt{
-    color: #333030;
-    text-indent: 5%;
-    &--large{
-        font-size: 26px;
-    }
-    &--italic{
-        font-style: italic;
-    }
-
+  &--strong {
+    font-weight: 700;
+  }
 }
 
 .emphase {
-    font-style: italic;
-    font-weight: bold;
-    color: black;
+  font-style: italic;
+  font-weight: bold;
+  color: black;
 }
