--- a/sass/main.css
+++ b/sass/main.css
@@ -1,7 +1,6 @@
 /*Media queries*/
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
@@ -9,62 +8,25 @@ body {
 *:before {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 section {
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem 2.5rem;
   height: auto;
 }
 
-.wrapper--grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+.indent {
+  text-indent: 5%;
 }
 
-.wrapper--grid--3 {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-}
-
-.wrapper--center {
-  margin: auto;
-  width: 70%;
-}
-
-.grid-column-left {
-  -ms-grid-column: 1;
-  grid-column: 1;
-}
-
-.grid-column-2 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-}
-
-.grid-column-3 {
-  -ms-grid-column: 3;
-  grid-column: 3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 5;
-  grid-row: 1/6;
-}
-
-.grid-column--left-2 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
+.bloc-title {
+  margin: 1rem 0;
 }
 
 .bloc-txt {
   margin-bottom: 2rem;
+  line-height: 1.8;
 }
 
 .bloc-txt--center {
@@ -73,18 +35,18 @@ section {
 }
 
 body {
-  font-family: 'Cormorant', serif;
-  font-size: 20px;
-  font-weight: 300;
+  font-family: "Cormorant", serif;
+  font-size: 22px;
+  font-weight: 500;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 592px) {
   body {
     font-size: 16px;
   }
 }
 
-h1, p {
+h1,
+p {
   -webkit-margin-before: 0;
           margin-block-start: 0;
   -webkit-margin-after: 0;
@@ -92,23 +54,15 @@ h1, p {
 }
 
 .heading {
-  font-size: 5.5rem;
+  font-size: 5rem;
   font-weight: 400;
   text-transform: capitalize;
   font-style: italic;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 592px) {
   .heading {
-    font-size: 4.5rem;
+    font-size: 4rem;
   }
-}
-
-.heading--offerings {
-  font-size: 4rem;
-  font-weight: 400;
-  text-transform: capitalize;
-  font-style: italic;
 }
 
 .subheading {
@@ -116,11 +70,24 @@ h1, p {
   text-transform: uppercase;
   font-weight: 400;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 592px) {
   .subheading {
     font-size: 1.5rem;
   }
+}
+
+.title {
+  font-size: 3.5rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  font-style: italic;
+}
+
+.subtitle {
+  font-weight: 500;
+  color: black;
+  font-size: 1.8rem;
+  font-style: italic;
 }
 
 p {
@@ -131,43 +98,44 @@ a {
   text-decoration: none;
   color: black;
 }
-
 a:hover, a:focus {
-  color: #ae9f9f;
+  color: rgb(174, 159, 159);
 }
 
 nav {
   font-style: italic;
 }
 
+.strong {
+  font-weight: 700;
+}
+
 .txt {
   color: #333030;
   text-indent: 5%;
 }
-
 .txt--large {
   font-size: 26px;
 }
-
 .txt--italic {
   font-style: italic;
 }
 
-header {
-  margin: 1.5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border-bottom: 2px solid #ae9f9f;
+.emphase {
+  font-style: italic;
+  font-weight: bold;
+  color: red;
 }
 
-@media screen and (max-width: 768px) {
+header {
+  margin: 1.5rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgb(174, 159, 159);
+}
+@media screen and (max-width: 592px) {
   header {
     margin: 1rem;
   }
@@ -179,67 +147,84 @@ header {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 592px) {
   .logo-container {
     height: 80px;
   }
 }
-
-.logo {
-  font-family: "Whisper", cursive;
-}
-
-.logo--1 {
-  font-size: 56px;
-  position: relative;
-  top: -20px;
-}
-
-@media screen and (max-width: 768px) {
-  .logo--1 {
-    font-size: 40px;
-  }
-}
-
-.logo--2 {
-  font-size: 20px;
-  font-weight: 200px;
-  position: relative;
-  left: 64px;
-  top: -46px;
-}
-
-@media screen and (max-width: 768px) {
-  .logo--2 {
-    font-size: 14px;
-    top: -40px;
-    left: 50px;
-  }
-}
-
-.logo--3 {
-  font-size: 50px;
-  position: relative;
-  top: -70px;
-  left: -2px;
-}
-
-@media screen and (max-width: 768px) {
-  .logo--3 {
-    font-size: 36px;
-    top: -55px;
+@media screen and (max-width: 592px) {
+  .logo-container {
+    height: 60px;
   }
 }
 
 .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .nav__link {
   margin-left: 1.5rem;
+}
+@media screen and (max-width: 592px) {
+  .nav__link {
+    display: none;
+  }
+}
+
+.nav__link--bull {
+  position: relative;
+}
+.nav__link--bull:hover:after, .nav__link--bull:focus:after {
+  content: attr(aria-label);
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -2.5em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  white-space: nowrap;
+  font-weight: bold;
+  color: #333030;
+  font-size: 16px;
+}
+
+.dropdown {
+  display: none;
+}
+@media screen and (max-width: 592px) {
+  .dropdown {
+    display: block;
+    margin-right: 2.5em;
+  }
+}
+.dropdown__btn {
+  font-size: 30px;
+  cursor: pointer;
+}
+.dropdown__menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: -1.5em;
+  list-style-type: none;
+  background-color: antiquewhite;
+  padding: 0;
+  margin: 2px 1.5em 0 0;
+}
+.dropdown__input {
+  display: none;
+}
+.dropdown__input:hover + .dropdown__menu, .dropdown__input:checked + .dropdown__menu {
+  display: block;
+  display: flex;
+  flex-direction: column;
+}
+.dropdown__menu li {
+  padding: 10px 20px;
+  text-align: left;
+  font-style: italic;
+  border-bottom: #333030 solid 0.5px;
 }
 
 .homepage__txt {
@@ -247,28 +232,18 @@ header {
   margin-bottom: 1.5rem;
   height: auto;
   font-size: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: center;
 }
-
 .homepage__txt .subheading {
   margin-bottom: 2rem;
 }
-
 .homepage__txt p {
   font-size: 24px;
   font-weight: 400;
 }
-
 .homepage__img-container {
   width: 80%;
   margin: auto;
@@ -312,10 +287,21 @@ img {
   color: #333030;
   font-style: italic;
   font-weight: bold;
-  border-bottom: 1px solid #ae9f9f;
+  border-bottom: 1px solid rgb(174, 159, 159);
 }
-
 .link--mail {
   font-style: italic;
 }
-/*# sourceMappingURL=main.css.map */
+
+.lang__link {
+  width: 26px;
+  height: 22px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+button {
+  border: none;
+  background: none;
+  padding: none;
+}/*# sourceMappingURL=main.css.map */
