--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/mixins";
+@import "./utils/colors";
 @import "./base/base";
 @import "./base/typography";
 @import "./layouts/header";
