--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,1 +1,12 @@
+.map-container {
+  margin-top: 2rem;
+}
 
+.map {
+  width: 300px;
+  height: 350px;
+  @include mobile-bp {
+    width: 150px;
+    height: 175px;
+  }
+}
